--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
         <li role="presentation" routerLinkActive='active'
         [routerLinkActiveOptions]="{exact:true}"
         ><a routerLink='/'>Home</a></li>
-        <li role="presentation" routerLinkActive='active' [routerLinkActiveOptions]="{exact:true}"><a routerLink='/servers'>Servers</a></li>
-        <li role="presentation" routerLinkActive='active' [routerLinkActiveOptions]="{exact:true}"><a routerLink='/users'>Users</a></li>
+        <li role="presentation" routerLinkActive='active'><a routerLink='/servers'>Servers</a></li>
+        <li role="presentation" routerLinkActive='active'><a routerLink='/users'>Users</a></li>
       </ul>
     </div>
   </div>
