--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -12,8 +12,9 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <app-edit-server></app-edit-server>
-    <hr>
+    <router-outlet></router-outlet>
+    <!-- <app-edit-server></app-edit-server>
+    <hr> -->
     <!-- <app-server></app-server> -->
   </div>
 </div>
