--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,7 +3,7 @@
     <div class="list-group">
       <a
         [routerLink]="['/servers', server.id]"
-        [queryParams]="{allowEdit: 1}"
+        [queryParams]="{allowEdit: server.id === 1 ? '1' : '0'}"
         [fragment]="'Loading'"
         class="list-group-item"
         *ngFor="let server of servers">
@@ -13,9 +13,6 @@
   </div>
   <div class="col-xs-12 col-sm-4">
     <router-outlet></router-outlet>
-    <!-- <app-edit-server></app-edit-server>
-    <hr> -->
-    <!-- <app-server></app-server> -->
   </div>
 </div>
 
